--- a/pair.html
+++ b/pair.html
@@ -55,7 +55,7 @@
 </head>
 <body>
 
-  <h1>EDITH-MD Pairing</h1>
+  <h1>BAN-MD Pairing</h1>
 
   <input type="text" id="number" placeholder="Enter WhatsApp Number (e.g., 25 6700247470)" />
   <button onclick="getCode()">Generate Pair Code</button>
